syntax="proto3";
option java_package = "com.services";

option go_package="/pb";
import "google/protobuf/timestamp.proto";

message User {
  optional  string username = 1;
  optional  string password = 2;
  optional  string email = 3;
    string phoneNumber = 4;
    optional  string countryCode=5;

    optional  google.protobuf.Timestamp updatedAt = 6;
      string uuid = 7;
      string token = 8;
  optional string pubKey=9;
  // ⚠️WARNING: For testing.Need to be removed later
  optional string privKey=10;



}



